examen_practico/src/main/java/com/example/examenpractico/errors/RespuestaCorrectaFaltanteException.java
package com.example.examenpractico.errors;




public class RespuestaCorrectaFaltanteException extends RuntimeException {
	public RespuestaCorrectaFaltanteException() {
		super();
	}

	public RespuestaCorrectaFaltanteException(String mensaje) {
		super(mensaje);
	}
}
